Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
0.11.0
-
None
-
VS2010
Description
Removal of boost::lexical_cast and replaced with code that calls std::log10(2). std::log10(2) is ambiguous to VS2010.
- Fix build breakage
- add VS2010 32-bit build job to Appveyor to prevent future regression.
Attachments
Issue Links
- is broken by
-
THRIFT-4138 Fix remaining undefined behavior invalid vptr casts in C++ library
-
- Closed
-
- links to