THRIFT-4166: fix recent VC2010 build regression and prevent it in the future Client: cpp

This closes #1237